# pythonProject4

./: .gitignore  pyproject.toml
industrial_safety_project/: manage.py
industrial_safety_project/industrial_safety_app/: apps.py  models.py  serializers.py  urls.py  views.py
industrial_safety_project/industrial_safety_app/migrations/: 0001_initial.py
industrial_safety_project/industrial_safety_app/static/: frame5.css  mac-book-air1.css
industrial_safety_project/industrial_safety_app/templates/main/: about.html  index.html
industrial_safety_project/industrial_safety_project/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: db_insert_tasks.py
