
[project]
name = "industrial_safety_project"
version = "1.0.0"
description = ""
authors = [
    {name = "vasya", email = "spam@shit.com"},
]
dependencies = [
    "django==4.2.1",
    "djangorestframework==3.14.0",
    "pyyaml==6.0",
    "uritemplate==4.1.1",
    "django-cors-headers==4.0.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.12.0",
    "Flake8-pyproject>=1.2.3",
    "black>=23.3.0",
]

[tool.pdm.scripts]
start = 'sh -c "python industrial_safety_project/manage.py runserver & python scripts/db_insert_tasks.py call-insert 1 10"'


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
ignore = ["W291", "E203", "W503", "E731"]
exclude = [
    ".git",
    "__pycashe__",
    "docs",
    "build",
    "dist",
    ".venv",
    "__pypackeges__"
]
max-line-length = 120
count = true